# devbench

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PLAN.md  PLAN.md.new  README.md  TODO.md  _test_license_server.py  configforge-vs-jq.md  configforge-vs-online-converters.md  debug_detect.py  debug_multi.py  docker-compose.yaml  install.sh  pyproject.toml  setup.py  snap_state.py  test_merge.yaml  test_patch.patch
.github/workflows/: ci.yml  macos.yml  publish.yml
Formula/: devbench.rb
config/: nginx-proxy-demo.conf  nginx.conf
core/: __init__.py  _version.py  cli.py  configforge.py  detector.py  models.py  tools.py
demo/static/: index.html
devbench/: __init__.py  __main__.py
devbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: cli-reference.md
forge/: .claude-usage  .last-builder-change  .last-deep-audit  .last-gemini-review  .last-polisher-change  .last-polisher-review  PLAN.md  _builder_prompt.txt  _debug_comments.py  _run_gemini_rounds.py  _test_features.py  api-docs.md  blog-post.md  claude-audit-1.md  claude-comments-2.md  claude-cron-audit.md  claude-features-3.md  claude-fixes-1.md  claude-painpoints-2.md  claude-tests-3.md  commercial-research-20260607-2300.md  commercial-research-20260610-0614.md  commercial-research-20260610-1017.md  commercial-research-20260610-1100.md  commercial-research-20260610-1839.md  deep-audit-20260607-1836.md  deep-audit-20260607-2244.md  deep-audit-20260609-2200.md  deep-audit-20260610-0500.md  deep-audit-20260610-1004.md  deep-audit-20260610-1048.md  deep-audit-20260610-1408.md  deep-audit-20260610-1815.md  deep-audit-20260610-2233.md  deploy-web-demo.md  external-review-20260607-1416.md  external-review-20260607-1440.md  external-review-20260607-1534.md  external-review-20260607-1616.md  external-review-20260607-1835.md  (+147 more)
forge/seo/: _footer.html  _header.html  ansible-ini-to-yaml.md  csv-to-yaml-converter.md  docker-compose-converter.md  env-to-json-guide.md  (+12 more)
homebrew-tap/: README.md
scripts/: ask_gemini.py  ask_gemini_lite.py  build.sh  build_seo_html.py  create-homebrew-tap.sh  deploy_nginx.sh  docker-entrypoint.sh  install.sh  publish-pypi.sh  release.sh  run_ai.py  setup_distribution.sh
snapshots/: 2026-06-06-0032-state.json  2026-06-06-0113-state.json  2026-06-06-0116-state.json  2026-06-06-1103-state.json  2026-06-06-1139-state.json  2026-06-06-1152-state.json  2026-06-06-1229-state.json  2026-06-06-1339-state.json  2026-06-06-1415-state.json  2026-06-06-1418-state.json  2026-06-06-1436-state.json  2026-06-06-1509-state.json  2026-06-06-1631-state.json  2026-06-06-1635-state.json  2026-06-06-1711-state.json  2026-06-06-1747-state.json  2026-06-06-1823-state.json  2026-06-06-1835-state.json  2026-06-06-1910-state.json  2026-06-06-1948-state.json  2026-06-06-2026-state.json  2026-06-06-2044-state.json  2026-06-06-2045-state.json  2026-06-06-2101-state.json  2026-06-06-2124-state.json  2026-06-06-2256-state.json  2026-06-07-0128-state.json  2026-06-07-0148-state.json  2026-06-07-0229-state.json  2026-06-07-0253-state.json  2026-06-07-0334-state.json  2026-06-07-0352-state.json  2026-06-07-0426-state.json  2026-06-07-0525-state.json  2026-06-07-0551-state.json  2026-06-07-0615-state.json  2026-06-07-0642-state.json  2026-06-07-0702-state.json  2026-06-07-0721-state.json  2026-06-07-0741-state.json  (+12 more)
tests/: test_api.py  test_configforge.py  test_core.py  test_edge_cases.py  test_edge_cases_50.py  test_edge_cases_round7.py  test_hcl.py  test_jsonc.py  test_license.py  test_llm_tools.py  test_missed_edge_cases.py  test_missed_edge_cases_2.py  test_missed_edge_cases_3.py  test_missed_edge_cases_4.py  test_missed_edge_cases_5.py  test_pain_points.py  test_perf.py  test_properties.py  test_realworld.py  test_serve.py  test_swift_bridge_contract.py
tools/: yaml_json_comment_preserver.py
ui/: Package.swift
var/: licenses.db
web/: api.py  download.html  index.html  license.py  license_server.py  pricing.html  privacy.html  robots.txt  seo-headers.txt  serve.py  sitemap.xml  style.css  support.html
(+75 files in other folders)
