[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devbench"
version = "0.1.0"
description = "Developer tools library — 8 utilities, clipboard auto-detection, and a CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrew Peters", email = "apeters247@gmail.com" }]
keywords = ["developer-tools", "cli", "json", "base64", "jwt", "configforge"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

# `devbench` on PATH → core.cli:entry_point. Works from any directory once
# installed, because `core` is installed as a top-level importable package.
[project.scripts]
devbench = "core.cli:entry_point"

[project.urls]
Homepage = "https://github.com/apeters247/devbench"
Repository = "https://github.com/apeters247/devbench"

# Ship only the `core` package. The repo root holds many dev/scratch dirs
# (scripts, forge, tests, ui, web); restricting the find keeps the wheel clean.
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "web*", "devbench*"]
