[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devbench"
version = "0.1.0"
description = "ConfigForge: 11-format config converter with comment preservation + 9 dev tools. yq alternative with TOML write support."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Andrew Peters", email = "apeters247@gmail.com" }]
keywords = [
    "yaml-to-toml", "toml-converter", "yaml-converter", "json-converter",
    "config-file-converter", "configforge", "yq-alternative", "dasel-alternative",
    "comment-preserving-yaml", "yaml-comments", "hcl-converter", "plist-converter",
    "toml-write", "yaml-toml-json-xml-csv-ini-env-hcl-plist",
    "developer-tools", "cli", "json", "base64", "jwt", "token-counter", "text-chunker",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
hcl = ["python-hcl2"]
tiktoken = ["tiktoken>=0.7.0"]
toml = ["tomli; python_version < \"3.11\""]
all = ["devbench[pydantic]", "devbench[hcl]", "devbench[tiktoken]", "devbench[toml]"]

# When installed via `pip install devbench` or `pip install devbench[all]`,
# all optional deps are included. The `hcl` extra enables HCL format support.
# The `toml` extra enables TOML support on Python < 3.11.

# `devbench` on PATH → core.cli:entry_point. Works from any directory once
# installed, because `core` is installed as a top-level importable package.
[project.scripts]
devbench = "core.cli:entry_point"

[project.urls]
Homepage = "https://naxiai.com/tools/devbench/"
Repository = "https://github.com/apeters247/devbench"
Documentation = "https://naxiai.com/tools/devbench/"
"Bug Tracker" = "https://github.com/apeters247/devbench/issues"

# Ship only the `core` package. The repo root holds many dev/scratch dirs
# (scripts, forge, tests, ui, web); restricting the find keeps the wheel clean.
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "web*", "devbench*"]
